--- a/justificativas.html
+++ b/justificativas.html
@@ -1,96 +1,155 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Justificativas de Falta - Painel Admin</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gestão de Justificativas</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
   <style>
-    body { font-family: 'Poppins', sans-serif; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 1rem;
+      background-color: #f8fafc;
+    }
+    .container {
+      max-width: 960px;
+      margin: auto;
+      background: #fff;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    h1 {
+      color: #1e293b;
+      font-size: 1.75rem;
+      margin-bottom: 1.5rem;
+    }
+    label {
+      font-weight: 600;
+      display: block;
+      margin-top: 1rem;
+    }
+    select, input[type="date"] {
+      width: 100%;
+      padding: 0.5rem;
+      margin-top: 0.25rem;
+      border: 1px solid #cbd5e1;
+      border-radius: 6px;
+    }
+    table {
+      width: 100%;
+      margin-top: 2rem;
+      border-collapse: collapse;
+    }
+    th, td {
+      padding: 0.75rem;
+      text-align: left;
+      border-bottom: 1px solid #e2e8f0;
+    }
+    th {
+      background-color: #f1f5f9;
+    }
+    .actions button {
+      margin-right: 0.5rem;
+      padding: 0.4rem 0.8rem;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .approve { background-color: #10b981; color: white; }
+    .reject { background-color: #ef4444; color: white; }
   </style>
 </head>
-<body class="bg-gray-100 p-6">
-  <div class="max-w-5xl mx-auto">
-    <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Justificativas de Falta</h1>
+<body>
+  <div class="container">
+    <h1>Justificativas de Falta</h1>
 
-    <div id="listaJustificativas" class="space-y-6">
-      <!-- Justificativas serão inseridas aqui -->
-    </div>
+    <label for="funcionarioSelect">Funcionário</label>
+    <select id="funcionarioSelect">
+      <option value="">Todos</option>
+    </select>
+
+    <label for="dataInicio">Data Início</label>
+    <input type="date" id="dataInicio">
+
+    <label for="dataFim">Data Fim</label>
+    <input type="date" id="dataFim">
+
+    <button onclick="filtrarJustificativas()">Filtrar</button>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Data</th>
+          <th>Funcionário</th>
+          <th>Motivo</th>
+          <th>Anexo</th>
+          <th>Status</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody id="tabelaJustificativas"></tbody>
+    </table>
   </div>
 
   <script>
-    const container = document.getElementById('listaJustificativas');
-    let justificativas = JSON.parse(localStorage.getItem('justificativasPonto')) || [];
+    const firebaseConfig = {/* COLE AQUI SUA CONFIGURAÇÃO */};
+    const app = firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
-    function renderizarJustificativas() {
-      container.innerHTML = '';
-
-      if (justificativas.length === 0) {
-        container.innerHTML = '<p class="text-center text-gray-600">Nenhuma justificativa enviada até o momento.</p>';
-        return;
-      }
-
-      justificativas.forEach((j, index) => {
-        const div = document.createElement('div');
-        div.className = 'bg-white p-4 rounded-xl shadow-md';
-
-        div.innerHTML = `
-          <div class="flex justify-between items-center mb-2">
-            <h2 class="text-lg font-semibold text-gray-800">${j.funcionario}</h2>
-            <span class="text-sm text-gray-500">${new Date(j.dataEnvio).toLocaleString('pt-BR')}</span>
-          </div>
-          <p class="mb-2 text-gray-700"><strong>Motivo:</strong> ${j.motivo}</p>
-          ${j.anexo ? `<div class="mb-2"><strong>Anexo:</strong><br><a href="${j.anexo}" target="_blank" class="text-blue-600 underline">Visualizar Anexo</a></div>` : ''}
-          <div class="flex gap-4">
-            <button onclick="aprovar(${index})" class="bg-green-500 text-white px-4 py-1 rounded-lg hover:bg-green-600">Aprovar</button>
-            <button onclick="rejeitar(${index})" class="bg-red-500 text-white px-4 py-1 rounded-lg hover:bg-red-600">Rejeitar</button>
-          </div>
-        `;
-
-        container.appendChild(div);
+    async function carregarFuncionarios() {
+      const select = document.getElementById('funcionarioSelect');
+      const snapshot = await db.collection("usuarios").get();
+      snapshot.forEach(doc => {
+        const opt = document.createElement("option");
+        opt.value = doc.id;
+        opt.textContent = doc.data().nome;
+        select.appendChild(opt);
       });
     }
 
-    function aprovar(index) {
-      alert(`Justificativa de ${justificativas[index].funcionario} aprovada.`);
-      justificativas.splice(index, 1);
-      localStorage.setItem('justificativasPonto', JSON.stringify(justificativas));
-      renderizarJustificativas();
+    async function filtrarJustificativas() {
+      const func = document.getElementById("funcionarioSelect").value;
+      const inicio = new Date(document.getElementById("dataInicio").value);
+      const fim = new Date(document.getElementById("dataFim").value);
+      fim.setDate(fim.getDate() + 1);
+      const tabela = document.getElementById("tabelaJustificativas");
+      tabela.innerHTML = "";
+
+      let ref = db.collection("justificativas");
+      if (func) ref = ref.where("funcionario", "==", func);
+      const snapshot = await ref.get();
+
+      snapshot.forEach(doc => {
+        const d = doc.data();
+        const data = new Date(d.data);
+        if (data >= inicio && data < fim) {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td>${data.toLocaleDateString()}</td>
+            <td>${d.nome}</td>
+            <td>${d.motivo}</td>
+            <td><a href="${d.anexo}" target="_blank">Abrir</a></td>
+            <td>${d.status}</td>
+            <td class="actions">
+              <button class="approve" onclick="atualizarStatus('${doc.id}', 'Aprovado')">Aprovar</button>
+              <button class="reject" onclick="atualizarStatus('${doc.id}', 'Rejeitado')">Rejeitar</button>
+            </td>
+          `;
+          tabela.appendChild(tr);
+        }
+      });
     }
 
-    function rejeitar(index) {
-      alert(`Justificativa de ${justificativas[index].funcionario} rejeitada.`);
-      justificativas.splice(index, 1);
-      localStorage.setItem('justificativasPonto', JSON.stringify(justificativas));
-      renderizarJustificativas();
+    async function atualizarStatus(id, status) {
+      await db.collection("justificativas").doc(id).update({ status });
+      filtrarJustificativas();
     }
 
-    renderizarJustificativas();
+    window.onload = carregarFuncionarios;
   </script>
-  <!-- Firebase App -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-
-<!-- Firebase Auth -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-
-<!-- Firebase Firestore -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
-    authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
-    projectId: "controle-de-ponto-papelprint",
-    storageBucket: "controle-de-ponto-papelprint.appspot.com",
-    messagingSenderId: "630875968731",
-    appId: "1:630875968731:web:2dc067757a090bc16c28fe"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-  const auth = firebase.auth();
-</script>
-
 </body>
 </html>
