--- a/banco.html
+++ b/banco.html
@@ -1,95 +1,40 @@
+<!-- banco.html atualizado com integração de justificativas -->
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Banco de Horas</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #f9fafb;
-      margin: 0;
-      padding: 1rem;
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: auto;
-      background-color: #ffffff;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-    }
-
-    h1 {
-      text-align: center;
-      color: #00AEEF;
-    }
-
-    label {
-      font-weight: 600;
-    }
-
-    input, select, button {
-      display: block;
-      width: 100%;
-      padding: 0.5rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
-
-    button {
-      background-color: #00AEEF;
-      color: white;
-      font-weight: 600;
-      cursor: pointer;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1rem;
-    }
-
-    th, td {
-      border: 1px solid #e0e0e0;
-      padding: 0.75rem;
-      text-align: center;
-    }
-
-    th {
-      background-color: #f1f5f9;
-    }
-
-    .saldo-total {
-      font-weight: bold;
-      margin-top: 1rem;
-      text-align: right;
-    }
+    body { font-family: 'Poppins', sans-serif; background: #f9f9f9; margin: 0; padding: 0; }
+    .container { max-width: 1000px; margin: 30px auto; padding: 20px; background: #fff; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.05); }
+    h1 { font-size: 1.8rem; color: #333; margin-bottom: 20px; }
+    label { font-weight: 600; margin-right: 10px; }
+    select, input[type="date"] { padding: 8px; margin: 10px 10px 20px 0; border: 1px solid #ccc; border-radius: 5px; }
+    button { background: #00AEEF; color: #fff; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 10px; text-align: center; font-size: 0.95rem; }
+    th { background: #f0f0f0; }
+    #saldoTotal { margin-top: 20px; font-weight: 600; font-size: 1.2rem; color: #333; }
   </style>
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore.js"></script>
 </head>
-
 <body>
   <div class="container">
     <h1>Banco de Horas</h1>
+
     <label for="funcionario">Funcionário:</label>
     <select id="funcionario"></select>
 
-    <label for="dataInicio">Data Início:</label>
+    <label for="dataInicio">De:</label>
     <input type="date" id="dataInicio">
 
-    <label for="dataFim">Data Fim:</label>
+    <label for="dataFim">Até:</label>
     <input type="date" id="dataFim">
 
     <button onclick="filtrarBanco()">Filtrar</button>
-    <button onclick="exportarCSV()">Exportar CSV</button>
 
     <table>
       <thead>
@@ -105,77 +50,76 @@
       <tbody id="tabelaBanco"></tbody>
     </table>
 
-    <div class="saldo-total" id="saldoTotal"></div>
+    <div id="saldoTotal">Saldo total: 0h</div>
+    <button onclick="exportarCSV()">Exportar CSV</button>
   </div>
 
   <script>
-    // Cole aqui sua configuração do Firebase
-    const firebaseConfig = { /* sua config */ };
-    firebase.initializeApp(firebaseConfig);
+    const firebaseConfig = { /* seu config aqui */ };
+    const app = firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
+    async function carregarFuncionarios() {
+      const select = document.getElementById("funcionario");
+      const snapshot = await db.collection("funcionarios").get();
+      snapshot.forEach(doc => {
+        const opt = document.createElement("option");
+        opt.value = doc.id;
+        opt.textContent = doc.data().nome;
+        select.appendChild(opt);
+      });
+    }
+
     async function filtrarBanco() {
-      const funcionario = document.getElementById("funcionario").value;
+      const funcionarioId = document.getElementById("funcionario").value;
       const dataInicio = new Date(document.getElementById("dataInicio").value);
       const dataFim = new Date(document.getElementById("dataFim").value);
       dataFim.setHours(23, 59, 59, 999);
 
-      const snapshot = await db.collection("pontos")
-        .where("nome", "==", funcionario)
-        .where("timestamp", ">=", firebase.firestore.Timestamp.fromDate(dataInicio))
-        .where("timestamp", "<=", firebase.firestore.Timestamp.fromDate(dataFim))
+      const pontos = await db.collection("pontos")
+        .where("funcionarioId", "==", funcionarioId)
+        .where("data", ">=", dataInicio)
+        .where("data", "<=", dataFim)
         .get();
 
-      const registros = {};
-
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        const dia = data.timestamp.toDate().toLocaleDateString();
-        if (!registros[dia]) registros[dia] = [];
-        registros[dia].push(data);
-      });
+      const justificativas = await db.collection("justificativas")
+        .where("funcionarioId", "==", funcionarioId)
+        .where("status", "==", "aprovado")
+        .get();
+      const datasJustificadas = justificativas.docs.map(j => j.data().data);
 
       const tabela = document.getElementById("tabelaBanco");
       tabela.innerHTML = "";
-      let saldoTotalMin = 0;
+      let totalMinutos = 0;
 
-      for (let dia in registros) {
-        const pontos = registros[dia].sort((a, b) => a.timestamp.seconds - b.timestamp.seconds);
-        const entradas = pontos.map(p => p.timestamp.toDate());
-        const entrada = entradas[0];
-        const saidaAlmoco = entradas[1];
-        const retorno = entradas[2];
-        const saida = entradas[3];
+      pontos.forEach(doc => {
+        const data = doc.data();
+        const dataFormatada = new Date(data.data.toDate()).toLocaleDateString();
+        let saldoMin = data.saldoMinutos || 0;
 
-        let saldoMin = 0;
-        if (entrada && saida) {
-          const diff = (saida - entrada) / 60000;
-          const almoco = retorno && saidaAlmoco ? (retorno - saidaAlmoco) / 60000 : 60;
-          saldoMin = diff - almoco - 480; // 480 = 8h de jornada
+        if (datasJustificadas.includes(dataFormatada)) {
+          saldoMin = 0; // Não desconta se foi justificado
         }
 
-        saldoTotalMin += saldoMin;
-        const saldoTexto = (saldoMin >= 0 ? "+" : "") + Math.floor(saldoMin / 60) + "h" + Math.abs(saldoMin % 60) + "m";
+        const linha = `<tr>
+          <td>${dataFormatada}</td>
+          <td>${data.entrada || "-"}</td>
+          <td>${data.saidaAlmoco || "-"}</td>
+          <td>${data.retornoAlmoco || "-"}</td>
+          <td>${data.saida || "-"}</td>
+          <td>${saldoMin >= 0 ? "+" : "-"}${Math.floor(Math.abs(saldoMin)/60)}h${Math.abs(saldoMin)%60}m</td>
+        </tr>`;
 
-        tabela.innerHTML += `
-          <tr>
-            <td>${dia}</td>
-            <td>${entrada ? entrada.toLocaleTimeString() : "-"}</td>
-            <td>${saidaAlmoco ? saidaAlmoco.toLocaleTimeString() : "-"}</td>
-            <td>${retorno ? retorno.toLocaleTimeString() : "-"}</td>
-            <td>${saida ? saida.toLocaleTimeString() : "-"}</td>
-            <td>${saldoTexto}</td>
-          </tr>`;
-      }
+        tabela.innerHTML += linha;
+        totalMinutos += saldoMin;
+      });
 
-      const horas = Math.floor(saldoTotalMin / 60);
-      const minutos = Math.abs(saldoTotalMin % 60);
-      document.getElementById("saldoTotal").textContent = `Saldo total: ${saldoTotalMin >= 0 ? "+" : "-"}${Math.abs(horas)}h${minutos}m`;
+      document.getElementById("saldoTotal").textContent = `Saldo total: ${totalMinutos >= 0 ? "+" : "-"}${Math.floor(Math.abs(totalMinutos)/60)}h${Math.abs(totalMinutos)%60}m`;
     }
 
     function exportarCSV() {
       const linhas = document.querySelectorAll("table tr");
-      const csv = [...linhas].map(l => [...l.children].map(td => td.textContent).join(",")).join("\n");
+      const csv = [...linhas].map(l => [...l.children].map(c => c.textContent).join(",")).join("\n");
       const blob = new Blob([csv], { type: "text/csv" });
       const url = URL.createObjectURL(blob);
       const a = document.createElement("a");
@@ -185,19 +129,7 @@
       URL.revokeObjectURL(url);
     }
 
-    async function carregarFuncionarios() {
-      const snapshot = await db.collection("funcionarios").get();
-      const select = document.getElementById("funcionario");
-      snapshot.forEach(doc => {
-        const opt = document.createElement("option");
-        opt.value = doc.data().nome;
-        opt.textContent = doc.data().nome;
-        select.appendChild(opt);
-      });
-    }
-
-    carregarFuncionarios();
+    window.onload = carregarFuncionarios;
   </script>
 </body>
-
 </html>
